# Proiect-final-de-curs

./: Main.py  Prog2.py  Prog2test.py  README.md  Test 2.py  Test 3.py  Test 4  Test 4 Scroll.py  Test 5 buttons.py  Test 6 Imagevier 2.py  Test 7.py  Test 8.py  Test 9.py  Test.py  Test2.py  Weather app.py  ^Test 4 forwardbutton.py  pyproject.toml
