[tool.poetry]
name = "proiect de final de curs"
version = "0.1.0"
description = ""
authors = ["finkw <fink.werner290@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
